--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-clearfix u-group-elements u-group-elements-1">
           <h2 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="0">AMANKAN TIKETMU SEKARANG !! </h2>
-          <a href="../BELI TIKET/tiket.html" class="u-align-center u-border-none u-btn u-button-style u-palette-3-base u-btn-1">BELI TIKET</a>
+          <a href="https://ieskynath.github.io/Beli_Tiket/" class="u-align-center u-border-none u-btn u-button-style u-palette-3-base u-btn-1">BELI TIKET</a>
         </div>
       </div>
     </section>
